<resources>
    <string name="app_name">KotlinMultipleApps</string>
    <string name="txtHead">Calculate your Age</string>
    <string name="in_minutes">in minutes</string>
    <string name="selectDate">Select Date</string>
    <string name="selected_date">Selected Date</string>
    <string name="age_in_minutes">AGE IN MINUTES</string>
    <string name="ageapp">AgeApp</string>
    <string name="calcapp">CalcApp</string>
    <string name="quizapp">QuizApp</string>
    <string name="please_wait">Please Wait...</string>
    <string name="paintapp">PaintApp</string>
    <string name="workoutapp">WorkoutApp</string>
    <string name="image">image</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>


    <string name="image_contentDescription">image</string>
    <string name="miles_per_hour">miles/hour</string>

    <string name="action_refresh">Refresh</string>\

    <string name="note_text_no_happy_places_found_yet_kindly_add_one">No Happy Places Found Yet. Kindly add one.</string>
    <string name="image_content_description">image</string>

    <string name="btn_text_view_on_map">VIEW ON MAP</string>
    <string name="add_place_select_current_location_text">SELECT CURRENT LOCATION</string>
    <string name="happyplacesapp">HappyPlacesApp</string>




    <string name="google_maps_api_key">PLACE_FOR_KEY</string>

</resources>